# kaleidoscope

./: .gitignore  CMakeLists.txt  LICENSE  README.md
kaleidoscope/: CMakeLists.txt  main.cpp
kaleidoscope/src/: ast.cpp  ast.h  code_visitor.cpp  code_visitor.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  parser.cpp  parser.h
tests/: CMakeLists.txt  kaleidoscope_test.cpp
